# scribus-dock-plugin

./: CMakeLists.txt  README.md  plugin.cpp  plugin.h  scriptdocker.cpp
script_docker/: CMakeLists.txt  plugin.h  scriptdocker.cpp  scriptdocker.h  scriptdocker.ui
