include_directories(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

set(SCRIPT_DOCKER_PLUGIN_UI_SRC
    scriptdocker.ui
)

set(SCRIPT_DOCKER_PLUGIN_MOC_CLASSES
    plugin.h
    scriptdocker.h
)

set(SCRIPT_DOCKER_PLUGIN_SOURCES
    plugin.cpp
    scriptdocker.cpp
)

set(SCRIBUS_SCRIPT_DOCKER_PLUGIN "script_docker")

QT5_WRAP_UI(SCRIPT_DOCKER_PLUGIN_UI_SOURCES ${SCRIPT_DOCKER_PLUGIN_UI_SRC} )
QT5_WRAP_CPP(SCRIPT_DOCKER_PLUGIN_MOC_SOURCES ${SCRIPT_DOCKER_PLUGIN_MOC_CLASSES})

add_library(${SCRIBUS_SCRIPT_DOCKER_PLUGIN} MODULE ${SCRIPT_DOCKER_PLUGIN_SOURCES} ${SCRIPT_DOCKER_PLUGIN_MOC_SOURCES} ${SCRIPT_DOCKER_PLUGIN_UI_CPP} ${SCRIPT_DOCKER_PLUGIN_UI_SOURCES})

target_link_libraries(${SCRIBUS_SCRIPT_DOCKER_PLUGIN} ${PLUGIN_LIBRARIES})

install(TARGETS ${SCRIBUS_SCRIPT_DOCKER_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

# set_target_properties(${SCRIBUS_SCRIPT_DOCKER_PLUGIN} PROPERTIES VERSION "0.0.0")
